# vala-scp

./: README.md  meson.build  scp.vala
vapi/: libssh2.vapi
